--- a/Heart Rate Detector/View/Base.lproj/Main.storyboard
+++ b/Heart Rate Detector/View/Base.lproj/Main.storyboard
@@ -172,7 +172,7 @@
                                                             </label>
                                                         </subviews>
                                                     </stackView>
-                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Bc-Ia-fYE" customClass="CircleView" customModule="Heart_Rate_Detector" customModuleProvider="target">
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Bc-Ia-fYE">
                                                         <rect key="frame" x="21.5" y="135" width="300" height="300"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="AxK-9u-2P4">
@@ -197,7 +197,6 @@
                                                                                             <constraint firstAttribute="height" constant="100" id="AiO-6U-g3g"/>
                                                                                         </constraints>
                                                                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="50"/>
-                                                                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                         <nil key="highlightedColor"/>
                                                                                     </label>
                                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="bpm" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2br-bi-OP1">
@@ -206,7 +205,6 @@
                                                                                             <constraint firstAttribute="height" constant="60" id="i6A-OX-xCJ"/>
                                                                                         </constraints>
                                                                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="35"/>
-                                                                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                         <nil key="highlightedColor"/>
                                                                                     </label>
                                                                                 </subviews>
@@ -219,13 +217,12 @@
                                                                             <constraint firstAttribute="height" constant="50" id="Wzg-Jk-S9H"/>
                                                                         </constraints>
                                                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
-                                                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                         <nil key="highlightedColor"/>
                                                                     </label>
                                                                 </subviews>
                                                             </stackView>
                                                         </subviews>
-                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="300" id="1gX-b9-xev"/>
                                                             <constraint firstAttribute="height" constant="300" id="CwE-TL-ynV"/>
@@ -292,10 +289,10 @@
                         <viewLayoutGuide key="safeArea" id="S8n-1j-iIh"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="color" keyPath="startColor">
-                                <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </userDefinedRuntimeAttribute>
                             <userDefinedRuntimeAttribute type="color" keyPath="endColor">
-                                <color key="value" red="0.71979345029999997" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
@@ -333,7 +330,7 @@
                                         <rect key="frame" x="0.0" y="368" width="414" height="450"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="N1c-Bs-Akc" userLabel="Label Stack View">
-                                                <rect key="frame" x="0.0" y="20" width="414" height="411.5"/>
+                                                <rect key="frame" x="0.0" y="20" width="414" height="733"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Finger Position" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ufz-ex-GFh">
                                                         <rect key="frame" x="0.0" y="0.0" width="414" height="30"/>
@@ -354,7 +351,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="InstructionImg02" translatesAutoresizingMaskIntoConstraints="NO" id="NWh-4G-SUX">
-                                                        <rect key="frame" x="0.0" y="90" width="414" height="321.5"/>
+                                                        <rect key="frame" x="0.0" y="90" width="414" height="643"/>
                                                     </imageView>
                                                 </subviews>
                                             </stackView>
